first version of the webpage

--- a/index.html
+++ b/index.html
@@ -1,7 +1,55 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<img src="https://66.media.tumblr.com/f15a46d5473edce97053370ab1a668d8/tumblr_ptzebaM6Nl1uusqgeo1_540.gif" alt="Under construction"> 
-</body>
-</html>
+<HTML>
+<!--
+      ___             _ ___  ___ 
+     / __| __ _ _ __ (_) _ )/ __|
+     \__ \/ _` | '  \| | _ \ (_ |
+     |___/\__,_|_|_|_|_|___/\___|
+    -->
+
+<HEAD>
+    <TITLE>sam's board</TITLE>
+    <LINK REL="stylesheet" TYPE="text/css" HREF="/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Muli:400,900&display=swap" rel="stylesheet">
+</HEAD>
+
+<BODY>
+    <DIV CLASS="container-center">
+        <DIV CLASS="border">
+            <DIV id="header">
+                <H1><IMG SRC="/img/pinl.gif" /> sam's board <IMG SRC="/img/pinr.gif" /></H1>
+                <IMG SRC="/img/star_line.gif" />
+            </DIV>
+
+            <DIV ID="pin-board">
+                <DIV CLASS="post-it pink small">
+                    <H1><IMG SRC="/img/link.gif" /> links </H1>
+                    <UL>
+                        <LI><A HREF="https://github.com/SamiBG">Github</a></LI>
+                        <LI><A HREF="https://catsandcode.tumblr.com/">Tumblr</a></LI>
+                    </UL>
+                </DIV>
+
+                <DIV CLASS="post-it purple medium">
+                    <H1> <IMG SRC="/img/star.gif" /> about</H1>
+                    <P>Software Engineer and PhD student working on Computational Linguistic.</P>
+                    <P>Watches too many shows, reads too many fanfics. Photography, musicals and art enthusiast, now learning astrophotography. Hockey player, getting hit by pucks weekly.</P>
+                </DIV>
+
+                <DIV CLASS="post-it blue big">
+                    <H1><IMG SRC="/img/computer.gif" /> projects</H1>
+                    <IMG SRC="/img/under_construction_bar.gif" />
+                </DIV>
+
+                <DIV ID="footer">
+                    <CENTER>
+                        <IMG SRC="/img/star_line.gif" />
+                        <P>&copy; 1994-2019 SamiBG</P>
+                    </CENTER>
+                </DIV>
+            </DIV>
+        </DIV>
+    </DIV>
+</BODY>
+
+</HTML>
