Update links and container size

--- a/index.html
+++ b/index.html
@@ -18,15 +18,16 @@
         <DIV CLASS="border">
             <DIV id="header">
                 <H1><IMG SRC="/img/pinl.gif" /> sam's board <IMG SRC="/img/pinr.gif" /></H1>
-                <IMG SRC="/img/star_line.gif" />
+                <IMG CLASS="star-banner" SRC="/img/star_line.gif" />
             </DIV>
 
             <DIV ID="pin-board">
-                <DIV CLASS="post-it pink small">
+                <DIV ID="nav-bar" CLASS="post-it pink small">
                     <H1><IMG SRC="/img/link.gif" /> links </H1>
                     <UL>
                         <LI><A HREF="https://github.com/SamiBG">Github</a></LI>
                         <LI><A HREF="https://catsandcode.tumblr.com/">Tumblr</a></LI>
+                        <LI><A HREF="https://www.goodreads.com/user/show/6167821-sam">Goodreads</a></LI>
                     </UL>
                 </DIV>
 
@@ -43,7 +44,7 @@
 
                 <DIV ID="footer">
                     <CENTER>
-                        <IMG SRC="/img/star_line.gif" />
+                        <IMG CLASS="star-banner" SRC="/img/star_line.gif" />
                         <P>&copy; 1994-2019 SamiBG</P>
                     </CENTER>
                 </DIV>
