added js decoder

--- a/index.html
+++ b/index.html
@@ -39,13 +39,15 @@
 
                 <DIV CLASS="post-it blue big">
                     <H1><IMG SRC="/img/computer.gif" /> projects</H1>
-                    <IMG SRC="/img/under_construction_bar.gif" />
+                    <UL>
+                        <LI><A HREF="/delta-decoder-js/">Marklin Delta Decoder</a></LI>
+                    </UL>
                 </DIV>
 
                 <DIV ID="footer">
                     <CENTER>
                         <IMG CLASS="star-banner" SRC="/img/star_line.gif" />
-                        <P>&copy; 1994-2019 SamiBG</P>
+                        <P>&copy; 1994-2020 SamiBG</P>
                     </CENTER>
                 </DIV>
             </DIV>
